lab1 preparing layouts

--- a/ui/public/store.html
+++ b/ui/public/store.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DarkBill</title>
+    <title>Store</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/store.css">
 </head>
 <body>
 
@@ -45,92 +42,33 @@
     </header>
 
     <main class="main">
-        <section class="tops">
-            <div class="top">
-                <div class="top-title">
-                    TOP SALES
+        <aside class="filters-aside-container">
+            <div class="filters-header">
+                Catalog
+            </div>
+            <div class="filters">
+                <div class="filter-item">
+                    <a href="#" style="font-weight: 550">T-shorts</a>
                 </div>
+                <div class="filter-item">
+                    <a href="#" style="font-weight: 550">Hats</a>
+                </div>
+                <div class="filter-item">
+                    <a href="#" style="font-weight: 550">Jewelry</a>
+                </div>
+                <div class="filter-item">
+                    <a href="#" style="font-weight: 550">Souvenirs</a>
+                </div>
+            </div>
+        </aside>
+
+        <section class="content">
+            <div class="goods">
                 <div class="goods-list">
-
-                    <div class="card">
-                        <div class="card-img-container">
-                            <img class="card-img" src="../src/img/groups/cannibal_corpse_tshort.jpg" alt="">
-                        </div>
-                        <div class="card-body-container">
-                            <div class="card-body">
-                                Футболка Cannibal Corpse
-                            </div>
-                            <span class="card-body-price">20$</span>
-                            <button class="card-button">Add to cart</button>
-                        </div>
-                    </div>
-
-
-                    <div class="card">
-                        <div class="card-img-container">
-                            <img class="card-img" src="../src/img/groups/dark_throne_tshort.jpg" alt="">
-                        </div>
-                        <div class="card-body-container">
-                            <div class="card-body">
-                                Футболка Cannibal Corpse
-                            </div>
-                            <span class="card-body-price">20$</span>
-                            <button class="card-button">Add to cart</button>
-                        </div>
-                    </div>
 
                     <div class="card">
                         <div class="card-img-container">
                             <img class="card-img" src="../src/img/groups/metallica_tshort.jpg" alt="">
-                        </div>
-                        <div class="card-body-container">
-                            <div class="card-body">
-                                Футболка Cannibal Corpse
-                            </div>
-                            <span class="card-body-price">20$</span>
-                            <button class="card-button">Add to cart</button>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="card-img-container">
-                            <img class="card-img" src="../src/img/groups/bullet_for_my_valentine_tshort.jpg" alt="">
-                        </div>
-                        <div class="card-body-container">
-                            <div class="card-body">
-                                Футболка Cannibal Corpse
-                            </div>
-                            <span class="card-body-price">20$</span>
-                            <button class="card-button">Add to cart</button>
-                        </div>
-                    </div>
-
-                </div>
-                <a href="#" style="font-weight: 550">See all</a>
-            </div>
-
-            <div class="top">
-                <div class="top-title">
-                    Our recommendations
-                </div>
-                <div class="goods-list">
-
-                    <div class="card">
-                        <div class="card-img-container">
-                            <img class="card-img" src="../src/img/stuff/cup1.jpg" alt="">
-                        </div>
-                        <div class="card-body-container">
-                            <div class="card-body">
-                                Футболка Cannibal Corpse
-                            </div>
-                            <span class="card-body-price">20$</span>
-                            <button class="card-button">Add to cart</button>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="card-img-container">
-                            <img class="card-img" src="../src/img/stuff/cup2.jpg" alt="">
                         </div>
                         <div class="card-body-container">
                             <div class="card-body">
@@ -156,7 +94,85 @@
 
                     <div class="card">
                         <div class="card-img-container">
-                            <img class="card-img" src="../src/img/stuff/plate_th_reckless.jpg" alt="">
+                            <img class="card-img" src="../src/img/stuff/cup3.jpg" alt="">
+                        </div>
+                        <div class="card-body-container">
+                            <div class="card-body">
+                                Футболка Cannibal Corpse
+                            </div>
+                            <span class="card-body-price">20$</span>
+                            <button class="card-button">Add to cart</button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img-container">
+                            <img class="card-img" src="../src/img/stuff/cup3.jpg" alt="">
+                        </div>
+                        <div class="card-body-container">
+                            <div class="card-body">
+                                Футболка Cannibal Corpse
+                            </div>
+                            <span class="card-body-price">20$</span>
+                            <button class="card-button">Add to cart</button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img-container">
+                            <img class="card-img" src="../src/img/stuff/cup3.jpg" alt="">
+                        </div>
+                        <div class="card-body-container">
+                            <div class="card-body">
+                                Футболка Cannibal Corpse
+                            </div>
+                            <span class="card-body-price">20$</span>
+                            <button class="card-button">Add to cart</button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img-container">
+                            <img class="card-img" src="../src/img/stuff/cup3.jpg" alt="">
+                        </div>
+                        <div class="card-body-container">
+                            <div class="card-body">
+                                Футболка Cannibal Corpse
+                            </div>
+                            <span class="card-body-price">20$</span>
+                            <button class="card-button">Add to cart</button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img-container">
+                            <img class="card-img" src="../src/img/stuff/cup3.jpg" alt="">
+                        </div>
+                        <div class="card-body-container">
+                            <div class="card-body">
+                                Футболка Cannibal Corpse
+                            </div>
+                            <span class="card-body-price">20$</span>
+                            <button class="card-button">Add to cart</button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img-container">
+                            <img class="card-img" src="../src/img/stuff/cup3.jpg" alt="">
+                        </div>
+                        <div class="card-body-container">
+                            <div class="card-body">
+                                Футболка Cannibal Corpse
+                            </div>
+                            <span class="card-body-price">20$</span>
+                            <button class="card-button">Add to cart</button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img-container">
+                            <img class="card-img" src="../src/img/stuff/cup3.jpg" alt="">
                         </div>
                         <div class="card-body-container">
                             <div class="card-body">
@@ -168,13 +184,16 @@
                     </div>
 
                 </div>
-                <a href="#" style="font-weight: 550">See all</a>
             </div>
+            <a href="#" style="font-weight: 550">1...</a>
         </section>
+
+
     </main>
     <footer class="footer">
         <p class="text-center text-muted">Rockbill, Hihihi-hahaha Inc</p>
     </footer>
 </div>
+
 </body>
 </html>
